# azure-log-converter

./: azlogconvert.py  pyproject.toml  setup.py
