[tool.poetry]
name = "azure-log-converter"
version = "0.1.0"
description = "Converts azure webjobs logs into a better form"
authors = ["Michał Klimek <michal.piotr.klimek@gmail.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.6"
pytz = "^2022.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project.scripts]
azlogconvert = "azlogconvert:entry_point"

[project]
name = "azure-log-converter"
version = "0.1.0"
description = "Converts azure webjobs logs into a better form"
requires-python = ">=3.6"
dependencies = [
    "pytz==2022.2.1"
]